Password Safe, please see the accompanying README.txt file. For more 
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.15
==================
[2407346] "Open Another" and "Create New" actions in "Incorrect
Passkey" dialog box working again.
[2407072] Can now tab to read-only checkbox in password entry form via
File->Open or recently used list.
[2269930] Track write permission of file in opening dialog: If the
user chooses a file with different permission than the original, then
the r-o status is updated accordingly.
[2142691] Better support for Japanese text.
[2113261] No longer crashes when opening write-protected database.
[2102624] Can now change a normal entry into an alias or an alias'
base entry into an alias of another entry taking its aliases with it.
[2101656] Incorrect Notes field behaviour when using scroll bars 
corrected.
[2100916] Correct colouring of the Dragbar icons after changing
selected entry.
[2100429] Handle invalid time field in database gracefully. Thanks to
David B. Martin for his help in tracking this down.
[] Correct display of tree items on restore from minimize when 'X'
button used to minimize.
[] Ensure XML Import correctly processes normal entries with a 
password field that is in alias or shortcut form.

Changes to Existing Features in 3.15
====================================
None.

New Features for 3.15
=====================
[] Implement the CF_CLIPBOARD_VIEWER_IGNORE feature supported by some
Clipboard Viewers.
[] Add feature to display a subset of the password. This is useful
for websites that need different particular characters from a password at
each login. To access this, select an item, right-click and choose
Display Subset of Password.
[2203438] Remove "[alt]", "[ssh]" and "{alt}" special keywords from URL
when copying to the clipboard.