@@ -12,6 +12,8 @@ Bugs fixed in 3.15
 ==================
 [2407346] "Open Another" and "Create New" actions in "Incorrect
 Passkey" dialog box working again.
+[2407325] Prevent creation of a group name with '.', which confuses
+PasswordSafe.
 [2407072] Can now tab to read-only checkbox in password entry form via
 File->Open or recently used list.
 [2269930] Track write permission of file in opening dialog: If the
